--- a/app/test.ipynb
+++ b/app/test.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": null,
    "id": "5dd8c470",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
     "        self._build_model()\n",
     "\n",
     "    def _prepare_data_custom(self):\n",
-    "        X, y = prepare_data_multiclass()\n",
+    "        X, y_train = prepare_data_multiclass(data_dir=\"data/dataset_v2/Training/\", image_size=256, seed=self.seed)\n",
     "        X = X.reshape((X.shape[0], -1)) / 255.0  # flatten and normalize\n",
     "        scaler = StandardScaler()\n",
     "        X_scaled = scaler.fit_transform(X)\n",
@@ -131,10 +131,22 @@
     "        \n",
     "        # Añadir este escalado\n",
     "        scaler_angle = MinMaxScaler(feature_range=(0, np.pi / 2))\n",
-    "        X_pca_scaled = scaler_angle.fit_transform(X_pca)\n",
+    "        X_train = scaler_angle.fit_transform(X_pca)\n",
+    "\n",
+    "        X_test, y_test = prepare_data_multiclass(data_dir=\"data/dataset_v2/Testing/\", image_size=256, seed=self.seed)\n",
+    "        X_test = X_test.reshape((X_test.shape[0], -1)) / 255.0  # flatten and normalize\n",
+    "        scaler = StandardScaler()\n",
+    "        X_scaled_test = scaler.fit_transform(X_test)\n",
+    "        pca = PCA(n_components=self.pca_features)\n",
+    "        X_pca_test = pca.fit_transform(X_scaled_test)\n",
+    "        \n",
+    "        # Añadir este escalado\n",
+    "        scaler_angle = MinMaxScaler(feature_range=(0, np.pi / 2))\n",
+    "        X_test = scaler_angle.fit_transform(X_pca_test)\n",
+    "\n",
     "\n",
     "        # Usar X_pca_scaled para el split\n",
-    "        X_train, X_test, y_train, y_test = train_test_split(X_pca_scaled, y, test_size=0.2, random_state=self.seed)\n",
+    "        #X_train, X_test, y_train, y_test = train_test_split(X_pca_scaled, y, test_size=0.2, random_state=self.seed)\n",
     "        self.X_train = X_train\n",
     "        self.X_test = X_test\n",
     "        self.y_train = np.array(y_train)\n",
